--- a/causes.html
+++ b/causes.html
@@ -16,6 +16,34 @@
     <title>Causes</title>
 </head>
 <body>
-    <div class="nav" style="opacity: 0;" data-include="nav"></div>
+    <div class="nav" data-include="nav"></div>
+
+    <section>
+        <p>
+            There were many speculated reasons as to what caused the French revolution. The most common reasons cited are:
+        </p>
+        <ul>
+            <li>Food shortages</li>
+            <li>Unfair taxing</li>
+            <li>Government bankruptcy</li>
+            <li>The Enlightenment</li>
+            <!-- <li>Incompetent governemnt</li> -->
+        </ul>
+    </section>
+
+    <section>
+        <h1>Food Shortages</h1>
+        <p>
+            Throughout the 18th century, France faced an accumulating economic crisis. The population was rapidly growing, and that caused a lack of food supply for the population. In 1788, a severe winter resulted in famine and widespread starvation, especially in the countryside of France. The food shortages caused civil unrest amongst citizens; King Louis XVI recognized that there was a crisis, however, there were no significant actions taken to support the citizens during the food shortage crisis. In addition, during the food shortage crisis rumors arose in October 1789 that Marie Antoinette was hoarding wheat and grain within the palace. Overall, the aristocracy had lots of food, and they were not concerned about the shortage of food. This caused the French people to be discontent with the government because the monarchy was only considering their own wants, while not considering the needs of the French citizens. 
+        </p>
+    </section>
+
+    <section>
+        <h1>Taxes and Financial Crisis</h1>
+        <p>
+            Some of the main causes of the French revolution were financial, including taxes. One of the reasons why the taxes contributed to the start of the revolution was because of an unfair taxation system. The Estates-General was a representative assembly of France, consisting of three estates, each representing a class in French society. The estates were also known as classes in French society. This class system, along with the French monarchy was also known as the Ancien Régime. The First Estate represented the clergy (Church ministers), the Second Estate represented the nobility, and
+            the Third Estate represented everyone else. The First and Second Estates owned most of the land and money, but they payed little to no tax. The Third Estate, or the "commoners," owned little money and receieved no financial support from the government, but they were heavily taxed. This made the Third Estate unhappy. Furthermore, each estate received only one vote, and so tax reform was near impossible because the nobility and clergy, who liked having no tax, could easily outvote the Third Estate. 
+        </p>
+    </section>
 </body>
 </html>
