--- a/causes.html
+++ b/causes.html
@@ -41,8 +41,24 @@
     <section>
         <h1>Taxes and Financial Crisis</h1>
         <p>
-            Some of the main causes of the French revolution were financial, including taxes. One of the reasons why the taxes contributed to the start of the revolution was because of an unfair taxation system. The Estates-General was a representative assembly of France, consisting of three estates, each representing a class in French society. The estates were also known as classes in French society. This class system, along with the French monarchy was also known as the Ancien Régime. The First Estate represented the clergy (Church ministers), the Second Estate represented the nobility, and
-            the Third Estate represented everyone else. The First and Second Estates owned most of the land and money, but they payed little to no tax. The Third Estate, or the "commoners," owned little money and receieved no financial support from the government, but they were heavily taxed. This made the Third Estate unhappy. Furthermore, each estate received only one vote, and so tax reform was near impossible because the nobility and clergy, who liked having no tax, could easily outvote the Third Estate. 
+            Some of the main causes of the French revolution were financial, including taxes. One of the reasons why the taxes contributed to the start of the revolution was because of an unfair taxation system. The Estates-General was a representative assembly of France, consisting of three estates, each representing a class in French society. The estates were also known as classes in French society. This class system, along with the French monarchy was also known as the Ancien Régime. The First Estate represented the clergy (Church ministers), the Second Estate represented the nobility, and the Third Estate represented everyone else. The First and Second Estates owned most of the land and money, but they payed little to no tax. The Third Estate, or the "commoners," owned little money and receieved no financial support from the government, but they were heavily taxed. This made the Third Estate unhappy. Furthermore, each estate received only one vote, and so tax reform was near impossible because the nobility and clergy, who liked having no tax, could easily outvote the Third Estate. 
+        </p>
+        <p>
+            Meanwhile, there was a financial crisis going on in France. The government was practically bankrupt, and Louis spent almost half the national budget just trying to pay off debt. This will be discussed in further detail in "Incompetent Ruler."
+        </p>
+    </section>
+
+    <section>
+        <h1>The Enlightenment</h1>
+        <p>
+            The Enlightenment, also known as the Age of Reason, was a philosophical period of time during the 18th century. Philosophers used scientific discoveries and reason to challenge the traditional values of an absolute monarchy, which was France’s form of government at the time. Such critics were questioning the monarchy, and they convinced the French peoples that the monarchy was corrupt and intolerable. This caused French citizens to question the necessity of an absolute monarchy—did the king actually have a "divine right" to rule? This was another one of the major reasons people lost faith in the French monarchy and started the revolution.
+        </p>
+    </section>
+
+    <section>
+        <h1>Incompetent ruler</h1>
+        <p>
+            Louis XVI, the current King of France, had inherited the throne at a very young age and thus had little opportunity to learn how to be a ruler. He made many poor decisions as a ruler leading up to the French Revolution. For example, he played a major part in financing the American Revolution by loaning large amount of money to the Americans. However, he never got the money back. This and other similar instances of poor financial decisions led the French government into bankruptcy. Also, 
         </p>
     </section>
 </body>
