--- a/timeline.html
+++ b/timeline.html
@@ -121,7 +121,7 @@
                 Meanwhile, the French army continued to win battles. They continued on to claim Holland, after which Holland, Prussia, and Spain made peace with France and exited the war. The French, led by Napoleon, also entered Italy in 1796, causing Sardinia to give in as well. In 1797, Austria also came to a peace agreement. The countries now occupied by France became “sister republics,” with similar governments as the new France. The wars were not over, however. The Directory wanted to spread the revolution across Europe, and also claimed Switzerland and other parts of Italy. France still remained at war with Britain, however, and so, unable to attack England directly, intended to cut off Britain's access to India by seizing Egypt. They held Egypt for some time, but eventually had to concede to the British and Egyptian armies in 1799, when Napoleon and his army returned to France. 
             </p>
             <p>
-                Upon returning, in November 1799, Napoleon led a coup to overthrow the Directory, declaring himself First Consul of France. Thus, the revolution was over: France had gone all the way from authoritarianism to republic to authoritarianism.
+                Upon returning, in November 1799, Napoleon led a coup to overthrow the Directory, declaring himself First Consul of France. Thus, the revolution was over: France's government had cycled from authoritarianism to republic back to authoritarianism.
             </p>
         </div>
     </section>
