--- a/causes.html
+++ b/causes.html
@@ -9,7 +9,7 @@
     
     <script>
         const scripts = [];
-        const styles = ['css/common.css'];
+        const styles = ['css/common.css', 'css/content.css'];
     </script>
     <script src="js/load.js"></script>
 
@@ -20,26 +20,26 @@
 
     <section>
         <p>
-            There were many speculated reasons as to what caused the French revolution. The most common reasons cited are:
+            There are many speculated reasons as to what caused the French revolution. The most commonly  cited reasons are:
         </p>
         <ul>
             <li>Food shortages</li>
             <li>Unfair taxing</li>
             <li>Government bankruptcy</li>
             <li>The Enlightenment</li>
-            <!-- <li>Incompetent governemnt</li> -->
+            <li>Incompetent governemnt</li>
         </ul>
     </section>
 
     <section>
-        <h1>Food Shortages</h1>
+        <h2>Food Shortages</h2>
         <p>
             Throughout the 18th century, France faced an accumulating economic crisis. The population was rapidly growing, and that caused a lack of food supply for the population. In 1788, a severe winter resulted in famine and widespread starvation, especially in the countryside of France. The food shortages caused civil unrest amongst citizens; King Louis XVI recognized that there was a crisis, however, there were no significant actions taken to support the citizens during the food shortage crisis. In addition, during the food shortage crisis rumors arose in October 1789 that Marie Antoinette was hoarding wheat and grain within the palace. Overall, the aristocracy had lots of food, and they were not concerned about the shortage of food. This caused the French people to be discontent with the government because the monarchy was only considering their own wants, while not considering the needs of the French citizens. 
         </p>
     </section>
 
     <section>
-        <h1>Taxes and Financial Crisis</h1>
+        <h2>Taxes and Financial Crisis</h2>
         <p>
             Some of the main causes of the French revolution were financial, including taxes. One of the reasons why the taxes contributed to the start of the revolution was because of an unfair taxation system. The Estates-General was a representative assembly of France, consisting of three estates, each representing a class in French society. The estates were also known as classes in French society. This class system, along with the French monarchy was also known as the Ancien Régime. The First Estate represented the clergy (Church ministers), the Second Estate represented the nobility, and the Third Estate represented everyone else. The First and Second Estates owned most of the land and money, but they payed little to no tax. The Third Estate, or the "commoners," owned little money and receieved no financial support from the government, but they were heavily taxed. This made the Third Estate unhappy. Furthermore, each estate received only one vote, and so tax reform was near impossible because the nobility and clergy, who liked having no tax, could easily outvote the Third Estate. 
         </p>
@@ -49,16 +49,16 @@
     </section>
 
     <section>
-        <h1>The Enlightenment</h1>
+        <h2>The Enlightenment</h2>
         <p>
             The Enlightenment, also known as the Age of Reason, was a philosophical period of time during the 18th century. Philosophers used scientific discoveries and reason to challenge the traditional values of an absolute monarchy, which was France’s form of government at the time. Such critics were questioning the monarchy, and they convinced the French peoples that the monarchy was corrupt and intolerable. This caused French citizens to question the necessity of an absolute monarchy—did the king actually have a "divine right" to rule? This was another one of the major reasons people lost faith in the French monarchy and started the revolution.
         </p>
     </section>
 
     <section>
-        <h1>Incompetent ruler</h1>
+        <h2>Incompetent ruler</h2>
         <p>
-            Louis XVI, the current King of France, had inherited the throne at a very young age and thus had little opportunity to learn how to be a ruler. He made many poor decisions as a ruler leading up to the French Revolution. For example, he played a major part in financing the American Revolution by loaning large amount of money to the Americans. However, he never got the money back. This and other similar instances of poor financial decisions led the French government into bankruptcy. Also, 
+            Louis XVI, the current King of France, had inherited the throne at a very young age and thus had little opportunity to learn how to be a ruler. He made many poor decisions as a ruler leading up to the French Revolution. For example, he played a major part in financing the American Revolution by loaning large amount of money to the Americans. However, he never got the money back. This and other similar instances of poor financial decisions led the French government into bankruptcy. He also refused to back some of the National Assembly's decisions. Also, Louis did not approve of the system the National Assembly had initially tried to implement in which power was shared between the National Assembly and the king, and thus tried to flee the country which ultimately got him executed for treason. So, Louis XVI's poor decisions created many problems for the French government leading up to the French revolution, and were another major cause for the revolution.
         </p>
     </section>
 </body>
