--- a/timeline.html
+++ b/timeline.html
@@ -10,7 +10,7 @@
 
     <script>
         const scripts = [];
-        const styles = ['css/common.css', 'css/timeline.css'];
+        const styles = ['css/common.css', 'css/content.css'];
     </script>
     <script src="js/load.js"></script>
 
