--- a/causes.html
+++ b/causes.html
@@ -19,6 +19,7 @@
     <div class="nav" data-include="nav"></div>
 
     <section>
+        <h2>Overview</h2>
         <p>
             There are many speculated reasons as to what caused the French revolution. The most commonly  cited reasons are:
         </p>
