add content to more pages

--- a/causes.html
+++ b/causes.html
@@ -28,7 +28,7 @@
             <li>Unfair taxing</li>
             <li>Government bankruptcy</li>
             <li>The Enlightenment</li>
-            <li>Incompetent governemnt</li>
+            <li>Incompetent government</li>
         </ul>
     </section>
 
