--- a/impacts.html
+++ b/impacts.html
@@ -18,6 +18,11 @@
 
     <section>
         <h2>Short Term Impacts</h2>
+        <div>
+            <p>
+                In the short term, the French Revolution had several impacts. Before the revolution, France’s government was an absolute monarchy, whereas after the revolution, it became a consulate under Napoleon (and later an empire starting in 1804, also under Napoleon). Although the revolutionary republic didn’t last, the government of France still changed as a result of the revolution. In the short term, France also lost many of their aristocracy. Many of the nobility fled France during the revolution and stayed in other countries. They were known as the émigrés, literally meaning “emigrants.” In the short term, the French revolution also resulted in the expansion of France’s territory. At the end of the revolution, France had claimed Belgium and occupied parts of Italy. France had also raised a very large army, and due to that and Napoleon’s military genius, was later able to conquer much of Europe under Napoleon (post-revolution). 
+            </p>
+        </div>
     </section>
     <section>
         <h2>Long Term Impacts</h2>
@@ -62,6 +67,18 @@
         </div>
         <div>
             <h3>Inspiring revolutions in other countries</h3>
+            <ul>
+                <li>
+                    The act of French citizens revolting against the monarchy and governing system of France inspired other countries to revolt against absolutist regimes.
+                </li>
+                <li>
+                    Many citizens who were revolting were inspired by the idea of liberty and freedom. When other countries revolted, liberalism and democratic ideas replaced older, more traditional laws and practices within those countries.
+                </li>
+                <li>
+                    These more democratic societies that embraced freedom and rights paved the way for 21st century society as it is today.
+                </li>
+            </ul>
+            <p class="show-content active"><i class="fas fa-angle-down"></i> More</p>
             <p>
                 The French Revolution impacted other countries by inspiring other revolutions in other countries. In particular, the French revolution inspired revolutions against monarchies in Europe, and revolutions against colonial rule. Political revolutions in the rest of Europe began with the French Revolution. The French revolution influenced people in other European countries, and it caused people to fight against the authority of kings. The French revolution also influenced revolutions in other parts of the world. For example, the French revolution sparked the Haitian Revolution of 1791, as Haiti had an oppressive government at the time as well. It also inspired the Irish Rebellion of 1798, and the revolutionary wars in Latin America. These countries' citizens were inspired by the idea of liberty, and revolutionaries fought to overthrow the aristocratic and colonial rule that was controlling countries at the time. These revolutions across the world lead to the establishment of a significant number of democracies. Other revolutions also brought liberalism to countries, and it ended feudal and traditional laws and practices. These changes benefited those societies because there was a shift from old ways of governing society to a new way of governing which was more developed, and beneficial for the citizens. 
             </p>
