--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 
     <script>
         const scripts = [];
-        const styles = ['css/common.css'];
+        const styles = ['css/common.css', 'css/video.css'];
     </script>
     <script src="js/load.js"></script>
 </head>
