--- a/people.html
+++ b/people.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script>
-        const scripts = ['js/morebutton.js'];
+        const scripts = [];
         const styles = ['css/common.css', 'css/content.css'];
     </script>
     <script src="js/load.js"></script>
