--- a/sources.html
+++ b/sources.html
@@ -8,12 +8,44 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script>
-        const scripts = ['js/morebutton.js'];
-        const styles = ['css/common.css', 'css/content.css', 'css/morebutton.css'];
+        const scripts = [];
+        const styles = ['css/common.css', 'css/content.css'];
     </script>
     <script src="js/load.js"></script>
 </head>
 <body>
     <div class="nav" data-include="nav"></div>
+
+    <pre class="serif">
+
+Barber, Nicola. <i>The French Revolution.</i> Questioning History. United Kingdom: White-Thomas Publishing Ltd., 2004.
+
+Biography.com Editors. "Louis XVI Biography." A&E Television Networks. Last updated January 16, 2020. https://www.biography.com/royalty/louis-xvi.
+
+Cranny, Michael. <i>Crossroads A Meeting of Nations.</i> 2nd ed. Toronto, Ontario: Susan Cox, 2013.
+
+CrashCourse. "The French Revolution - Crash Course World History." August 10, 2012. Video, 11:54. https://www.youtube.com/watch?v=lTTvKwCylFY.
+
+CrashCourse. "The French Revolution - Crash Course European History." October 8, 2019. Video, 15:28.https://www.youtube.com/watch?v=5fJl_ZX91l0.
+
+CrashCourse. "Napoleon Bonaparte - Crash Course European History." October 21, 2019. Video, 15:53.https://www.youtube.com/watch?v=Pd6E38FfuMg.
+
+Doone, Brian, Jennifer Llewellyn, John Rae, Jim Southey, and Steve Thompson. "The August 4th Abolition of Feudalism (1789)." Alpha History. https://alphahistory.com/frenchrevolution/august-4th-abolition-of-feudalism-1789.
+
+<i>Enyclopaedia Britannica School</i>, s.v. "France." Last modified October 31, 2019. https://school.eb.com/levels/high/article/France/110436.
+
+<i>Enyclopaedia Britannica School</i>, s.v. "French Revolution." Last modified September 10, 2020. https://school.eb.com/levels/high/article/French-Revolution/35357.
+
+<i>Enyclopaedia Britannica School</i>, s.v. "Reign of Terror." Last modified January 24, 2020. https://school.eb.com/levels/high/article/Reign-of-Terror/71796. 
+
+"French Revolution." In <i>Gale in Context Online Collection</i>. Detroit, MI: Gale, 2019. https://link-gale-com.bc.idm.oclc.org/apps/doc/NYRERM834695073/CIC?u=bcdc&sid=CIC&xid=cd90d64a.
+
+Public Broadcasting Service, "The French Revolution." PBS.org. Accessed November 7th, 2020. https://www.pbs.org/wgbh/americanexperience/features/adams-french-revolution/.
+
+Riggs, Kate. <i>The French Revolution</i>. Days of Change. 1st ed. Mankato, Minnesota: Creative Education, 2010.
+
+SparkNotes. "The French Revolution (1789-1799)." Barnes & Noble. Accessed November 15, 2020.
+https://www.sparknotes.com/history/european/frenchrev.
+    </pre>
 </body>
 </html>
