--- a/brinton.html
+++ b/brinton.html
@@ -94,7 +94,16 @@
         </div>
 
         <div>
-            <h2>Was it a success?</h2>
+            <h2 style="margin-top: 10px;">Was it a success?</h2>
+            <p>The French Revolution was a long term success, but not a short term success because:</p>
+            <ul>
+                <li></li>
+                Citizens were more content with the new form of government
+                The revolution had many impacts on other countries
+                Political power became more balanced
+                The citizens had more rights and freedom
+            </ul>
+            <p class="show-content active"><i class="fas fa-angle-down"></i> More</p>
             <p>
                 Firstly, the French revolution was a success was because the revolution had a lasting impact on other countries by inspiring other revolutions. The act of French citizens revolting against the monarchy and governing system of France inspired other countries to revolt. Many citizens who were revolting were motivated by the idea of liberty and freedom. When other countries revolted, liberalism was brought into those societies and it ended feudal and traditional laws and practices within those countries. These major changes impacted other societies because democracies were formed, and the new political systems that developed were more similar to the ways of running society in the 21st century. This connects to the criterion of the revolution having an impact on other countries. 
             </p>
