--- a/brinton.html
+++ b/brinton.html
@@ -57,6 +57,7 @@
                     The National Assembly had power, and the monarchy was no longer involved in making decisions and managing the crisis. This also caused relief and content amongst citizens. 
                 </li>
             </ul>
+            <p class="show-content active"><i class="fas fa-angle-down"></i> More</p>
             <p>
                 The French Revolution had a significant dramatic event during the first stage of the revolution, which was the storming of the Bastille Prison in France. The French revolution began when citizens stormed the Bastille prison on July 14th, 1789. The people of Paris knew that the King would use his foreign soldiers against his own people. The citizens of Paris needed gunpowder to protect and defend themselves against their monarchy, so they decided to take the gunpowder stored in the Bastille prison. A group of around a thousand men from the Third Estate participated in the attack. The French peoples were revolting against an oppressive government by storming the prison. This event was dramatic and significant to the revolution because it ushered in the French revolution. The day in history was such a significant turning point of the French Revolution that it is a day that is still celebrated in Paris right now. One of the reasons why the event was significant was because it symbolized the citizens rebelling against the controlling, incompetent, oppressive government.  An example of government protests includes the storming of the Bastille prison. This was a government protest because citizens were objecting and disagreeing with the monarchy by raiding Bastille prison. Although the citizens needed the gunpowder from the prison for protection, the attack was also acting as a symbol of protest against the government. 
             </p>
@@ -97,21 +98,28 @@
             <h2 style="margin-top: 10px;">Was it a success?</h2>
             <p>The French Revolution was a long term success, but not a short term success because:</p>
             <ul>
-                <li></li>
-                Citizens were more content with the new form of government
-                The revolution had many impacts on other countries
-                Political power became more balanced
-                The citizens had more rights and freedom
+                <li>The government went back to absolutism at the end (Napoleon).</li>
+                <li>However, less power was given to the Church.</li>
+                <li>The citizens were not happier under Napoleon.</li>
+                <li>The revolution spread the ideas of human rights within Europe and the world and inspired other revolts.</li>
             </ul>
+
+            <p>This is based on the following criteria for success:</p>
+            <ul>
+                <li>Did the citizens get more freedom and rights?</li>
+                <li>Was political power from the people, instead of being vested in a select group?</li>
+                <li>Did the government structure change?</li>
+                <li>Did it have a lasting impact within the country and in other countries?</li>
+                <li>Were the citizens happier?</li>
+                <li>Did it improve society?</li>
+            </ul>
+
             <p class="show-content active"><i class="fas fa-angle-down"></i> More</p>
             <p>
-                Firstly, the French revolution was a success was because the revolution had a lasting impact on other countries by inspiring other revolutions. The act of French citizens revolting against the monarchy and governing system of France inspired other countries to revolt. Many citizens who were revolting were motivated by the idea of liberty and freedom. When other countries revolted, liberalism was brought into those societies and it ended feudal and traditional laws and practices within those countries. These major changes impacted other societies because democracies were formed, and the new political systems that developed were more similar to the ways of running society in the 21st century. This connects to the criterion of the revolution having an impact on other countries. 
+                Firstly, the revolution balanced power away from the Catholic Church. The Catholic Church was extremely powerful in France, and they were very wealthy prior to the French revolution. However, the Catholic Church was attacked during the French revolution, and they lost their lands, wealth, and political power. This is one way that the political power became more balanced as a result of the French revolution, meeting this criterion for a successful revolution. On the other hand, when Napoleon came to power after the revolution, governmental power was no longer balanced in the way that it was with the National Assembly. Napoleon created an authoritarian regime not too different than Louis XVI's rule. Thus, in the short term, France's government did not change very much as a result of the revolution. On the other hand, power was diverted away from the Catholic Church, which overall led to greater freedom of religious worship in France. In the sense of balance of power, the French revolution was a short term failure and a long term success.
             </p>
             <p>
-                Another reason why the French revolution was a success was because the revolution allowed for the political power to become more balanced. The Catholic Church was extremely powerful in France, and they were very wealthy prior to the French revolution. However, the Catholic Church was attacked during the French revolution, causing the clergy to suffer, and causing thousands of priests to be exiled or killed. Eventually, land ownership changed, as the Church lost their lands, wealth, and political power. Thus the political power was more balanced. The Catholic Church also did not need all of the wealth and power that they had, and so some of that wealth and power was confiscated by the National Assembly to be used to improve the food and financial crisis at the time. This is one way that the political power became more balanced as a result of the French revolution, meeting this criterion for a successful revolution. 
-            </p>
-            <p>
-                The final reason why the French revolution was a success was because the revolution abolished the feudal system which paved the way for liberalism, and more rights and freedoms for citizens. After the National Assembly officially abolished the feudal system due to its ineffectiveness after feudal laws were not being enforced, they developed a new system that more closely resembled the way modern day society is run. This new system had a major benefit of allowing citizens to have more liberty, rights, and freedom. French peoples were no longer confined by their role in the feudal system, and their individual rights were promoted. Abolishing the feudal system also meant that people were no longer separated into groups of social status like peasants and nobles. In the new system, there was a shift towards liberalism in French society, which means that citizens have more equality, rights, and freedom. This directly applies to the criterion of citizens gaining more freedom and rights. 
+                During the French revolution, the <i>Declaration of Rights of Man and the Citizen</i> was legislated. It was one of the very first human rights documents, and it led to human rights becoming increasingly important after the revolution. Other revolutions across the world were inspired by the ideas of freedom and democracy embodied by the French revolution. This was another long term success for the French revolution.
             </p>
         </div>
     </section>
