--- a/people.html
+++ b/people.html
@@ -39,6 +39,7 @@
                 <p>
                     King Louis XVI was born on August 23rd, 1754, in the Palace of Versailles. King Louis XVI was the king of France from 1774 to 1792, he ruled for eighteen years. He married fourteen year old Marie Antoinette at age fifteen. Louis XVI was executed for treason and disloyalty by guillotine in 1793. Louis XVI grew up strong and healthy, although he was very shy. King Louis XVI inherited the throne at a very young age after his father, Louis, Dauphin of France. Since he was young when he became the king of France, he was incompetent and he lacked the vital skills necessary to govern a country. His poor decisions primarily contributed to the food shortages and financial crisis that France was facing while King Louis XVI was the King. The primary motive of the French revolution was to overthrow the monarchy, which included overthrowing King Louis XVI due to his poor ability to rule and make decisions to benefit the citizens. Essentially, King Louis XVI brought the French revolution upon himself, and he was one of the key figures before and during the French revolution. 
                 </p>
+                <p><q><i>I have no intention of sharing my authority</i></q> — King Louis XVI</p>
             </div>
         </div>
     </section>
