--- a/video.html
+++ b/video.html
@@ -19,6 +19,6 @@
         <source src="img/french-revolution-video.mp4" type="video/mp4">
         Something didn't work.
     </video>
-    <p>If the video doesn't work, use <a href="https://drive.google.com/file/d/189KeEp2uVLVlkGSokTf_P_MF_KeVs2lW/view" target="_blank" class="video-link">this link</a> instead.</p>
+    <p>If the video doesn't work, use <a href="https://drive.google.com/file/d/189KeEp2uVLVlkGSokTf_P_MF_KeVs2lW/view" target="_blank" id="video-link">this link</a> instead.</p>
 </body>
 </html>
