--- a/overview.html
+++ b/overview.html
@@ -22,6 +22,21 @@
         <p>
             The French revolution was a period of time in France during which people overthrew the kingdom and took control of the monarchy. The French revolution lasted for 10 years from 1789 to 1799, and it began on July 14th, 1789. It was a period of major social upheaval and disorder. The French Revolution was a violent uprising that brought down the monarchy in France. It pursued to change the relationship between rulers and the citizens. The revolution There were several significant factors that caused the citizens to be discontent with the monarchy; there were also many major impacts on France, and on other countries that resulted after the revolution.
         </p>
+
+        <img src="img/estates-general.jpg" alt="The meeting of the Estates-General">
+        <p class="caption">The meeting of the Estates-General, 1789</p>
+
+        <img src="img/louis-xvi-execution.jpg" alt="The execution of Louis XVI">
+        <p class="caption">The execution of Louis XVI, 1793</p>
+
+        <img src="img/cps.jpg" alt="The Committee of Public Safety">
+        <p class="caption">The Committee of Public Safety, 1793</p>
+
+        <img src="img/battle-of-the-pyramids.jpg" alt="The battle of the pyramids">
+        <p class="caption">The battle of the pyramids, Egypt: 1798</p>
+
+        <img src="img/napoleon-coup.jpg" alt="Napoleon's coup of the directory">
+        <p class="caption">Napoleon's coup of the Directory, the end of the revolution, 1799</p>
     </section>
 </body>
 </html>
